2008-06-11  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedynamicmethodbinding.vala:

	Support array parameters in D-Bus client methods

2008-06-10  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala:

	Output type_id for structs

2008-06-10  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedynamicmethodbinding.vala:

	Fix crash when using unsupported D-Bus arrays

2008-06-05  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_message_parse_error binding

	* vapi/gstreamer-0.10.vapi: regenerated

2008-06-04  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeassignmentbinding.vala:
	* gobject/valaccodegenerator.vala:

	Fix error reporting when duplicating non-reference counted objects,
	fixes bug 535849

2008-06-04  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala:

	Support 'cheader_filename' attribute for fields and methods,
	fixes bug 533634

2008-06-04  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeclassbinding.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodeinterfacebinding.vala:
	* gobject/valaccodetypesymbolbinding.vala:
	* gobject/valaclassregisterfunction.vala:

	Respect custom type_id

	* vapi/glib-2.0.vapi:

	Fix GTypeModule binding

2008-06-04  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2008-06-03  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.3.3 release

2008-06-03  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add byte order and number format constants, patch by Ali Sabil

2008-06-03  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Nullable fixes, patch by Nicolas Joseph, fixes bug 536478

	* vapi/gtk+-2.0.vapi: regenerated

2008-06-03  Jürg Billeter  <j@bitron.ch>

	* doc/vala/delegates.xml:

	Document delegate syntax, based on patch by Phil Housley

2008-06-03  Jürg Billeter  <j@bitron.ch>

	* doc/vala/classes.xml:

	Document signal syntax, based on patch by Phil Housley

2008-06-03  Jürg Billeter  <j@bitron.ch>
